<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CostumeApp</string>
    <string name="register_title">Join the Atelier</string>
    <string name="register_subtitle">Create your fashion profile</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="action_register">Create Account</string>
    <string name="action_login">Already a member? Log In</string>
    <string name="role_user">Fashionista</string>
    <string name="role_admin">Designer (Admin)</string>
    <string name="hint_profile_image">Tap to add profile photo</string>
</resources>